// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source hello1.4gl 1`] = `
main 
display "hello "
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
MAIN 
DISPLAY "hello "
END MAIN


`;

exports[`Source hello2.4gl 1`] = `
      main

      define nome char(50) # abc
            define big_field char(1234) # abc
      prompt "digite seu nome : " for nome

                  call fgl_winmessage( "hello",nome, "info")

      end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      MAIN

      DEFINE nome CHAR(50) # abc
            DEFINE big_field CHAR(1234) # abc
      PROMPT "digite seu nome : " FOR nome

                  CALL fgl_winmessage("hello",, nome, , "info")

      END MAIN


`;

exports[`Source hello3.4gl 1`] = `
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;

exports[`Source hello4.4gl 1`] = `

# erro de não poder sobescrever
main
	define l_ind smallint
	define ma_char array[5] of char(3)

	define ma_integer array [3] of integer

	define ma_array array [3] of record
	f2_check      char(1),
	f2_integer    integer,
	f2_smallint   smallint,
	f2_decimal    decimal(17,6),
	f2_decimal0   decimal(10,0),
	f2_char       char(10),
	f2_date       date,
	f2_dttime_y2s datetime year to second,
	f2_dttime_y2m datetime year to month,
	f2_dttime_y2f datetime year to fraction(3),
	f2_scroll     char(100),
	f2_varchar    varchar(20)
end record

initialize ma_array to null
initialize ma_integer to null


display "hello world"

call arraydeleteitem(ma_array)
call arrayadditem(ma_array,3)

call arraydeleteitem(ma_integer)
call arrayadditem(ma_integer,3)

for l_ind = 1 to 3
	let ma_integer[l_ind] = null

	let ma_array[l_ind].f2_check      = null
	let ma_array[l_ind].f2_integer    = null
	let ma_array[l_ind].f2_smallint   = null
	let ma_array[l_ind].f2_decimal    = null
	let ma_array[l_ind].f2_decimal0   = null
	let ma_array[l_ind].f2_char       = " "
	let ma_array[l_ind].f2_varchar    = " "
	let ma_array[l_ind].f2_date       = today + l_ind units day
	let ma_array[l_ind].f2_dttime_y2s = null
	let ma_array[l_ind].f2_dttime_y2m = null
	let ma_array[l_ind].f2_dttime_y2f = null
	let ma_array[l_ind].f2_scroll     = null

end for

for l_ind = 1 to 3
	let ma_integer[l_ind] = l_ind

	let ma_array[l_ind].f2_check      = "s"
	let ma_array[l_ind].f2_integer    = 339782827 + l_ind
	let ma_array[l_ind].f2_smallint   = 18721 + l_ind
	let ma_array[l_ind].f2_decimal    = -19838849.087712 + l_ind
	let ma_array[l_ind].f2_decimal0   = 9389007739 + l_ind
	let ma_array[l_ind].f2_char       = "texto"||l_ind
	let ma_array[l_ind].f2_varchar    = "textovarchar   "||l_ind
	let ma_array[l_ind].f2_date       = today + 3 units day
	let ma_array[l_ind].f2_dttime_y2s = current + l_ind units day
	let ma_array[l_ind].f2_dttime_y2m = current + l_ind + 1 units day
	let ma_array[l_ind].f2_dttime_y2f = current + l_ind + 2 units day
	let ma_array[l_ind].f2_scroll     = "texto scroll texto scroll texto scroll "
end for
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

# erro de não poder sobescrever
MAIN
	DEFINE l_ind smallint
	DEFINE ma_char ARRAY[5] OF CHAR(3)

	DEFINE ma_integer ARRAY [3] OF INTEGER

	DEFINE ma_array ARRAY [3] OF RECORD
	f2_check      CHAR(1), f2_integer    INTEGER, f2_smallint   smallint, f2_decimal    DECIMAL(17,6), f2_decimal0   DECIMAL(10,), f2_char       CHAR(10), f2_date       DATE, f2_dttime_y2s DATETIME YEAR TO SECOND, f2_dttime_y2m DATETIME YEAR TO MONTH, f2_dttime_y2f DATETIME YEAR TO FRACTION(3), f2_scroll     CHAR(100), f2_varchar    VARCHAR(20)
END RECORD

INITIALIZE ma_array TO 
INITIALIZE ma_integer TO 


DISPLAY "hello world"

CALL arraydeleteitem(ma_array)
CALL arrayadditem(ma_array,, 3)

CALL arraydeleteitem(ma_integer)
CALL arrayadditem(ma_integer,, 3)

FOR l_ind = 1 TO 3
	LET ma_integer[l_ind] = 

	LET ma_array[l_ind].f2_check      = 
	LET ma_array[l_ind].f2_integer    = 
	LET ma_array[l_ind].f2_smallint   = 
	LET ma_array[l_ind].f2_decimal    = 
	LET ma_array[l_ind].f2_decimal0   = 
	LET ma_array[l_ind].f2_char       = " "
	LET ma_array[l_ind].f2_varchar    = " "
	LET ma_array[l_ind].f2_date       = l_ind 
	LET ma_array[l_ind].f2_dttime_y2s = 
	LET ma_array[l_ind].f2_dttime_y2m = 
	LET ma_array[l_ind].f2_dttime_y2f = 
	LET ma_array[l_ind].f2_scroll     = 

END FOR

FOR l_ind = 1 TO 3
	LET ma_integer[l_ind] = l_ind

	LET ma_array[l_ind].f2_check      = "s"
	LET ma_array[l_ind].f2_integer    = l_ind
	LET ma_array[l_ind].f2_smallint   = l_ind
	LET ma_array[l_ind].f2_decimal    = l_ind
	LET ma_array[l_ind].f2_decimal0   = l_ind
	LET ma_array[l_ind].f2_char       = l_ind
	LET ma_array[l_ind].f2_varchar    = l_ind
	LET ma_array[l_ind].f2_date       = 3 
	LET ma_array[l_ind].f2_dttime_y2s = l_ind 
	LET ma_array[l_ind].f2_dttime_y2m = 1 
	LET ma_array[l_ind].f2_dttime_y2f = 2 
	LET ma_array[l_ind].f2_scroll     = "texto scroll texto scroll texto scroll "
END FOR
END MAIN


`;
